Added new logo and fixed lost link for author page

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ author: 'Admin'
 # edit 'categories' in the front matter of every post to match this username
 nickname: Admin
 bio: 'An enthusiast of electronics, signal processing and its applications.'
-location: 'Spain'
+location: 'Madrid, Spain'
 url: 'http://appnotes.tk/'
 #image: 'assets/images/casper.png'
 
