--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
 - 2.1.1
 
 #before_install:
-  - openssl aes-256-cbc -K $encrypted_698c8d2aca3b_key -iv $encrypted_698c8d2aca3b_iv -in publish-key.enc -out publish-key -d
+  #- openssl aes-256-cbc -K $encrypted_698c8d2aca3b_key -iv $encrypted_698c8d2aca3b_iv -in publish-key.enc -out publish-key -d
 install:
   # Install Jekyll and dependencies
   - bundle install
